# CCSemver

./: .travis.yml  Makefile.am  NEWS  README  README.autotools  README.md  configure.ac
doc/: ccsemver.texi  libsv.texi  macros.texi  semver.texi
include/: semver.h
meta/scripts/: ccsemver.pc.in
meta/slackware/: slack-desc.in
src/: ccsemver-comp.c  ccsemver-comparators.c  ccsemver-conditions.c  ccsemver-conditions.h  ccsemver-core.c  ccsemver-id.c  ccsemver-identifiers.c  ccsemver-input.c  ccsemver-internals.h  ccsemver-memory.c  ccsemver-num.c  ccsemver-numeric-components.c  ccsemver-range.c  ccsemver-ranges.c  ccsemver-semver.c  ccsemver-semver.h  ccsemver-utils.c  ccsemver-version.c  ccsemver.h
test/: CMakeLists.txt  documentation.c  xmake.lua
tests/: comp.c  comparators.c  documentation.c  identifiers.c  match.c  numbers.c  range.c  ranges.c  semver.c  utils.c  version.c
